# breakout_groups

./: .gitignore  README.md  bg_algo_compare.py  breakout_groups.code-workspace-model  breakout_groups.py  pyproject.toml  requirements.txt
.ai/: README.md  python_file_header.txt  python_style_and_tooling.md  system_prompt.md  validation_and_invariant_guidelines.md
.gitlab/: .gitlab-ci.yml
doc/: .gitignore  algrithm-chatgpt.txt  compression_based_sorting_hat_v91.ipynb  svi_debug.py  sys-diagram.md  vertical_intersection_v6.ipynb  workflow.md
inc/: config.py  subsets.py
src/: .gitignore  algo_compare_analysis.py  algo_interface.py  bg_parser.py  card.py  card_child.py  config-custom.py  config.py  configparms_ext.py  event.py  logger.yaml  logger_filters.py  logger_setup.py  plot_algo_compare.py  report_utils.py  reports.py  reports_cards.py  reports_cards_extra.py  reports_interactions_matrix.py  reports_run_stats.py  reports_util.py  retreat.py  roll_call.py  sessions.py  sessions_algo.py  sessions_brute_force_1.py  sessions_comb.py  sessions_manual.py  sessions_model.py  sessions_networkx.py  sessions_rand_inter.py  sessions_random.py  sessions_random_interactions.py  sessions_returned.py  sessions_util.py  sessions_vertical_intersection.py  workflow.md
tests/: __init__.py  conftest.py  pytest.ini  test_algo_interface.py  test_bg_algo_compare.py  test_bg_parser.py  test_breakout_groups.py  test_brute_force_1.py  test_card.py  test_comb-cs.py  test_config.py  test_config_pytest.py  test_event.py  test_event_integration.py  test_networkx.py  test_report_cards.py  (+23 more)
(+1 files in other folders)
