[project]
name = "breakout-groups"
version = "0.1.0"
description = "The breakout groups application is designed to assign attendees of an event into small groups."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "app-config>=2.0.4",
    "attrs>=22.2.0",
    "colorama>=0.4.6",
    "coverage>=7.4.0",
    "jinja2>=3.1.2",
    "numpy>=1.24.2",
    "packaging>=23.0",
    "pandas>=2.0.1",
    "pluggy>=1.0.0",
    "pytest>=7.2.2",
    "pytest-cov>=4.1.0",
    "pyyaml>=6.0",
    "reportlab>=4.0.4",
    "seaborn>=0.12.2",
    "six>=1.16.0",
]

[tool.flake8]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
]
